--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <script>
         var songs = [
             "Alessia_Cara_-_I_Choose.mp3",
-            "song2.mp3"
+            "song2.mp3",
+	    "song3.mp3"
         ];
         var currentSongIndex = 0;
         var reasons = [
