--- a/index.html
+++ b/index.html
@@ -74,7 +74,10 @@
 
         var dailyMessages = [
             "You are loved and adored <3",
-            "Message for Day 2",
+            "Smile, you are gorgeous.",
+	    "You are very special <3",
+	    "You are irreplaceable",
+            "Hey, gorgeous! Never leaving you <3"
             // ... up to 20 messages
         ];
 
