--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
         var songs = [
             "Alessia_Cara_-_I_Choose.mp3",
             "song2.mp3",
-	    "song3.mp3"
+	    "song3.mp3",
+	    "song4.mp3"
         ];
         var currentSongIndex = 0;
         var reasons = [
