--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
 	    "You are very special <3",
 	    "You are irreplaceable",
             "Hey, gorgeous! Never leaving you <3"
+	    "My special girl <3:,
+	    "I'll be by your side"
             // ... up to 20 messages
         ];
 
