--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
             "Alessia_Cara_-_I_Choose.mp3",
             "song2.mp3",
 	    "song3.mp3",
-	    "song4.mp3"
+	    "song4.mp3",
+	    "song5.mp3"
         ];
         var currentSongIndex = 0;
         var reasons = [
