--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 	    "You are irreplaceable",
             "Hey, gorgeous! Never leaving you <3"
 	    "My special girl <3:,
-	    "I'll be by your side"
+	    "I will be by your side"
             // ... up to 20 messages
         ];
 
