--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
             "Smile, you are gorgeous.",
 	    "You are very special <3",
 	    "You are irreplaceable",
-            "Hey, gorgeous! Never leaving you <3"
-	    "My special girl <3:,
+            "Hey, gorgeous! Never leaving you <3",
+	    "My special girl <3:",
 	    "I will be by your side"
             // ... up to 20 messages
         ];
