--- a/index.html
+++ b/index.html
@@ -81,7 +81,10 @@
 	    "You are irreplaceable",
             "Hey, gorgeous! Never leaving you <3",
 	    "My special girl <3:",
-	    "I will be by your side"
+	    "I will be by your side",
+	     "You are worth everything",
+	    "You are my sunshine",
+	     "You are perfectly created"
             // ... up to 20 messages
         ];
 
