--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
             "song2.mp3",
 	    "song3.mp3",
 	    "song4.mp3",
-	    "song5.mp3"
+	    "song5.mp3",
+	    "song6.mp3"
         ];
         var currentSongIndex = 0;
         var reasons = [
