--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             "song2.mp3",
 	    "song3.mp3",
 	    "song4.mp3",
+	    "song7.mp3",
 	    "song6.mp3"
         ];
         var currentSongIndex = 0;
