--- a/index.html
+++ b/index.html
@@ -146,7 +146,8 @@ window.onload = function() {
         <li><a href="index.html" class="nav-link">Home</a></li>
         <!-- Updated to open in a new tab -->
         <li><a href="game.html" class="nav-link" target="_blank">Game</a></li>
-        <li><a href="reasons.html" class="nav-link">Reasons</a></li>
+        <li><a href="https://ultimate144z.github.io/Anniversary_todolist/" class="nav-link" target="_blank">To-Do List</a></li>
+
     </ul>
 </nav>
 
